chore(clean): remove desktop.ini and ignore rules feat(auth): throttle login endpoint (5 per minute) feat(test): add Feature tests for register/login/roles feat(docker): add Dockerfile, nginx.conf and docker-compose docs(readme): clarify ports, setup on new PC and add CI note ci: add GitHub Actions workflow for Feature tests

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,7 @@ Thumbs.db
 
 # Evitar confusión con el frontend legacy que vive fuera de este repo en la misma workspace
 ../EDUSYNC/
+
+# Ruido de Windows
+**/desktop.ini
+**/Desktop.ini
