--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,8 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
+# Para Railway u otro PaaS con dominio dinámico, establecer APP_URL en runtime.
+# Ejemplo Railway: APP_URL=https://$RAILWAY_STATIC_URL
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -20,12 +22,14 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=edusync
+DB_USERNAME=root
+DB_PASSWORD=secret
+
+# Para tests locales puede usarse una base separada o SQLite en memoria vía phpunit.xml
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
