docs: README completo con stack, base de datos edusync_db, lenguajes y guía instalación PC nuevo

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-APP_NAME=Laravel
+APP_NAME=EduSync
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
 # Para Railway u otro PaaS con dominio dinámico, establecer APP_URL en runtime.
 # Ejemplo Railway: APP_URL=https://$RAILWAY_STATIC_URL
 
@@ -22,14 +22,15 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
+# Base de datos MySQL (nombre exacto: edusync_db)
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=edusync
+DB_DATABASE=edusync_db
 DB_USERNAME=root
-DB_PASSWORD=secret
+DB_PASSWORD=root
 
-# Para tests locales puede usarse una base separada o SQLite en memoria vía phpunit.xml
+# Para tests locales usa edusync_test (crea la BD primero)
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
