--- a/.env.testing
+++ b/.env.testing
@@ -8,7 +8,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=edusync_test
 DB_USERNAME=root
-DB_PASSWORD=secret
+DB_PASSWORD=root
 
 CACHE_STORE=array
 QUEUE_CONNECTION=sync
