feat: archivos de despliegue completos (Railway/Docker/VPS) + admin password segura + guía DEPLOY.md

--- a/.env.example
+++ b/.env.example
@@ -30,6 +30,9 @@ DB_DATABASE=edusync_db
 DB_USERNAME=root
 DB_PASSWORD=root
 
+# Password del usuario admin (CAMBIAR EN PRODUCCIÓN)
+ADMIN_PASSWORD=Admin2025!Secure
+
 # Para tests locales usa edusync_test (crea la BD primero)
 
 SESSION_DRIVER=database
