--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,15 @@ services:
     build:
       context: ./docker
       dockerfile: Dockerfile
+    environment:
+      - APP_ENV=local
+      - APP_DEBUG=true
+      - DB_CONNECTION=mysql
+      - DB_HOST=db
+      - DB_PORT=3306
+      - DB_DATABASE=edusync_db
+      - DB_USERNAME=edusync
+      - DB_PASSWORD=edusyncpass
     volumes:
       - ./:/var/www/html
     depends_on:
@@ -20,7 +29,7 @@ services:
   db:
     image: mysql:8.0
     environment:
-      MYSQL_DATABASE: edusync
+      MYSQL_DATABASE: edusync_db
       MYSQL_ROOT_PASSWORD: rootpass
       MYSQL_USER: edusync
       MYSQL_PASSWORD: edusyncpass
@@ -28,5 +37,6 @@ services:
       - "3307:3306"
     volumes:
       - dbdata:/var/lib/mysql
+    command: --default-authentication-plugin=mysql_native_password
 volumes:
   dbdata:
